--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,18 +43,20 @@ select = [
 ]
 
 ignore = [
-    "D100",   # Missing docstring in public module
-    "D104",   # Missing docstring in public package
-    "D203",   # 1 blank line required before class docstring (conflicts with D211)
-    "D213",   # Multi-line docstring summary should start at the second line (conflicts with D212)
-    "E501",   # Line too long (handled by black)
-    "COM812", # Trailing comma missing (conflicts with black)
-    "ISC001", # Implicitly concatenated string literals (conflicts with black)
-    "D415",   # First line should end with a period, question mark, or exclamation point (conflicts with D211)
-    "N802",   # Function name should be lowercase
-    "N806",   # Variable in function should be lowercase
-    "D107",   # Missing docstring in __init__
-    "T201",   # print found (using this in main)
+    "D100",    # Missing docstring in public module
+    "D104",    # Missing docstring in public package
+    "D400",    # First line should end with a period
+    "D203",    # 1 blank line required before class docstring
+    "D213",    # Multi-line docstring summary should start at the second line
+    "E501",    # Line too long
+    "COM812",  # Trailing comma missing
+    "ISC001",  # Implicitly concatenated string literals
+    "D415",    # First line should end with a period, question mark, or exclamation point
+    "N802",    # Function name should be lowercase
+    "N806",    # Variable in function should be lowercase
+    "D107",    # Missing docstring in __init__
+    "T201",    # print found (using this in main)
+    "INP001",  # Implicit namespace packages
 ]
 
 fixable = ["ALL"]
@@ -73,27 +75,19 @@ split-on-trailing-comma = true
 [tool.mypy]
 python_version = "3.13"
 strict = true
-warn_return_any = true
-warn_unused_configs = true
-warn_redundant_casts = true
-warn_unused_ignores = true
-warn_no_return = true
-warn_unreachable = true
-check_untyped_defs = true
-disallow_untyped_defs = true
-disallow_incomplete_defs = true
-disallow_untyped_decorators = true
-disallow_any_generics = true
-disallow_any_unimported = true
-disallow_subclassing_any = true
-no_implicit_optional = true
-strict_optional = true
-strict_equality = true
+
+# Disable some overly strict checks for practicality
+disallow_any_generics = false
+disallow_any_unimported = false
+disallow_subclassing_any = false
+
+# Display options
 show_error_codes = true
 show_column_numbers = true
 pretty = true
 color_output = true
 error_summary = true
+
+# Import handling
 ignore_missing_imports = true
 follow_imports = "silent"
-allow_redefinition = false
