--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,26 @@
+[build-system]
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
+
+
+[tool.setuptools]
+packages = ["DAWPY"]
+
+
+[project]
+name = "DAWPresence"
+version = "0.1.0"
+dependencies = [
+    "PyQt5>=5.15.11",
+    "pypresence>=4.3.0",
+    "psutil>=7.1.0",
+    'pywin32>=311; sys_platform == "win32"',
+    "setuptools>=80.9.0",
+    "loguru>=0.7.3"
+]
+
+
+
 # ========== BLACK (Formatter) ==========
 [tool.black]
 line-length = 100
