--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,25 @@
-# Data directory
-.data/
-
-# IDE
+# IDEs
+.vscode/
 .idea/
 
-# Python
-__pycache__
-*.pyc
-*.egg-info/
+# Claude
+.claude/
+CLAUDE.md
+.mcp.json
+
+# Tauri
+target/
+schemas/
+
+
+# Frontend
+.DS_Store
+node_modules/
+build/
+.svelte-kit/
+package/
+.env
+.env.*
+!.env.example
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
