--- a/DAWPresence/src-tauri/Cargo.toml
+++ b/DAWPresence/src-tauri/Cargo.toml
@@ -28,6 +28,6 @@ windows = { version = "0.61", features = [
     "Win32_Foundation",
     "Win32_UI_WindowsAndMessaging",
     "Win32_System_Threading",
-    "Win32_System_ProcessStatus"
+    "Win32_System_ProcessStatus",
+    "Win32_Storage_FileSystem"
 ] }
-
