--- a/.gitignore
+++ b/.gitignore
@@ -7,19 +7,5 @@
 CLAUDE.md
 .mcp.json
 
-# Tauri
+# Rust
 target/
-schemas/
-
-
-# Frontend
-.DS_Store
-node_modules/
-build/
-.svelte-kit/
-package/
-.env
-.env.*
-!.env.example
-vite.config.js.timestamp-*
-vite.config.ts.timestamp-*
