--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,13 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - uses: actions/checkout@v4
+
+      - name: Extract release notes from changelog
+        run: |
+          VERSION="${GITHUB_REF#refs/tags/}"
+          bash scripts/extract-changelog.sh "$VERSION" > release_notes.md
+
       - name: Download release artifact
         uses: actions/download-artifact@v4
         with:
@@ -45,5 +52,6 @@ jobs:
       - name: Create GitHub release
         uses: softprops/action-gh-release@v2
         with:
-          generate_release_notes: true
+          body_path: release_notes.md
+          generate_release_notes: false
           files: dist/DAWPresence.exe
