--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "DAWPresence"
-version = "1.0.2"
+version = "2.0.0"
 description = "A Discord Rich Presence client for Digital Audio Workstations (DAWs)"
 authors = ["MihaiStreames <72852703+MihaiStreames@users.noreply.github.com>"]
 license = "MIT"
@@ -9,19 +9,19 @@ edition = "2021"
 [dependencies]
 iced = { version = "0.14.0", features = ["tokio", "image"] }
 tray-icon = "0.21.2"
-notify-rust = "4"
-tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-tracing-appender = "0.2"
+notify-rust = "4.11.7"
+tracing = "0.1.44"
+tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
+tracing-appender = "0.2.4"
 confy = "2.0.0"
-crossbeam-channel = "0.5"
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
-tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
+crossbeam-channel = "0.5.15"
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.148"
+tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time"] }
 discord-rich-presence = "1.0.0"
 sysinfo = "0.37.2"
-regex = "1"
-image = "0.25"
+fancy-regex = "0.17.0"
+image = "0.25.9"
 
 [target.'cfg(windows)'.dependencies]
 windows = { version = "0.62.2", features = [
